--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
             <h2 class="breadcrumb-title">Sobre Nosotros</h2>
             <ul>
               <li>
-                <a href="index.html">Inicio</a>
+                <a href="/">Inicio</a>
               </li>
               <li>Sobre Nosotros</li>
             </ul>
@@ -47,7 +47,7 @@
                 <span><i class="ti-angle-double-right"></i></span> Manicura y pedicura de alta calidad
               </li>
             </ul>
-            <a href="contact.html" class="btn btn-primary btn-hover-dark">Contáctanos</a>
+            <a href="/contact" class="btn btn-primary btn-hover-dark">Contáctanos</a>
           </div>
           <!-- About Content End -->
         </div>
@@ -137,7 +137,7 @@
           <!-- Single Team Wrapper Start -->
           <div class="single-team-wrapper">
             <div class="thumb">
-              <a href="contact.html"><img class="fit-image" src="assets/images/team/1.jpg" alt="Imagen del equipo" /></a>
+              <a href="/contact"><img class="fit-image" src="assets/images/team/1.jpg" alt="Imagen del equipo" /></a>
               <!-- Social Shear Start -->
               <div class="social-share">
                 <a title="Facebook" href="#/"><i class="ti-facebook"></i></a>
@@ -157,7 +157,7 @@
           <!-- Single Team Wrapper Start -->
           <div class="single-team-wrapper">
             <div class="thumb">
-              <a href="contact.html"><img class="fit-image" src="assets/images/team/2.jpg" alt="Imagen del equipo" /></a>
+              <a href="/contact"><img class="fit-image" src="assets/images/team/2.jpg" alt="Imagen del equipo" /></a>
               <!-- Social Shear Start -->
               <div class="social-share">
                 <a title="Facebook" href="#/"><i class="ti-facebook"></i></a>
@@ -177,7 +177,7 @@
           <!-- Single Team Wrapper Start -->
           <div class="single-team-wrapper">
             <div class="thumb">
-              <a href="contact.html"><img class="fit-image" src="assets/images/team/3.jpg" alt="Imagen del equipo" /></a>
+              <a href="/contact"><img class="fit-image" src="assets/images/team/3.jpg" alt="Imagen del equipo" /></a>
               <!-- Social Shear Start -->
               <div class="social-share">
                 <a title="Facebook" href="#/"><i class="ti-facebook"></i></a>
