--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
               <!-- Header Logo Start -->
               <div class="col-lg-3 col-md-4 col-6">
                 <div class="header-logo">
-                  <a href="index.html"><img src="static/images/logo/logo.png" alt="Site Logo" /></a>
+                  <a href="/"><img src="static/images/logo/logo.png" alt="Site Logo" /></a>
                 </div>
               </div>
               <!-- Header Logo End -->
@@ -270,13 +270,13 @@
                     <a href="wishlist.html">Ayuda & Contáctanos</a>
                   </li>
                   <li>
-                    <a href="contact.html">Devoluciones & Reembolsos</a>
+                    <a href="/contact">Devoluciones & Reembolsos</a>
                   </li>
                   <li>
-                    <a href="contact.html">Tiendas en Línea</a>
+                    <a href="/contact">Tiendas en Línea</a>
                   </li>
                   <li>
-                    <a href="contact.html">Términos & Condiciones</a>
+                    <a href="/contact">Términos & Condiciones</a>
                   </li>
                 </ul>
               </div>
@@ -291,13 +291,13 @@
                     <a href="wishlist.html">Lista de Deseos</a>
                   </li>
                   <li>
-                    <a href="contact.html">Planes de Precios</a>
+                    <a href="/contact">Planes de Precios</a>
                   </li>
                   <li>
-                    <a href="contact.html">Seguimiento de Pedidos</a>
+                    <a href="/contact">Seguimiento de Pedidos</a>
                   </li>
                   <li>
-                    <a href="contact.html">Devoluciones</a>
+                    <a href="/contact">Devoluciones</a>
                   </li>
                 </ul>
               </div>
