--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
             <h2 class="breadcrumb-title">Ponerse en contacto</h2>
             <ul>
               <li>
-                <a href="index.html">Inicio</a>
+                <a href="/">Inicio</a>
               </li>
               <li>Ponerse en contacto</li>
             </ul>
