--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@
         <div class="col-md-6 pe-lg-9 pe-3 mb-6" data-aos="fade-up" data-aos-duration="1000">
           <!-- About Thumb Start -->
           <div class="about-thumb">
-            <img class="fit-image" src="assets/images/about/1.png" alt="Imagen de la peluquería" />
+            <img class="fit-image" src="static/images/about/1.jpg" alt="Imagen de la peluquería" />
           </div>
           <!-- About Thumb End -->
         </div>
