--- a/templates/services.html
+++ b/templates/services.html
@@ -27,7 +27,7 @@
         <div class="col-md-6 pe-lg-9 pe-3 mb-6" data-aos="fade-up" data-aos-duration="1000">
           <!-- Services Thumb Start -->
           <div class="services-thumb">
-            <img class="fit-image" src="assets/images/services/1.png" alt="Servicios de peluquería" />
+            <img class="fit-image" src="static/images/about/OIP.jpeg" alt="Servicios de peluquería" />
           </div>
           <!-- Services Thumb End -->
         </div>
